fix lists on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -68,10 +68,20 @@ code {
   flex-grow: 1;
 }
 
+.recipe-card,
 .create-card {
   border: solid 1px #ccc;
   border-radius: 5px;
   margin-top: 10px;
   margin-bottom: 10px;
   padding: 15px;
+}
+
+@media(max-width:470px){
+  .recipe-card {
+    padding: 0px;
+  }
+  .recipe-card li {
+    text-align: left;
+  }
 }
